--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".rankUI"></activity>
+        <activity android:name=".mypageUI"></activity>
+        <activity android:name=".rankUI" />
         <activity android:name=".searchUI" />
         <activity android:name=".postUI" />
         <activity
