--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -14,6 +15,7 @@
         <activity android:name=".rankUI"></activity>
         <activity android:name=".searchUI" />
         <activity android:name=".postUI" />
+        <activity android:name=".signupUI" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -23,8 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SingUp" />
-        <activity android:name=".RequestHttpConnection" />
+        <activity android:name=".RequestHttpURLConnection" />
     </application>
 
 </manifest>
