--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".mypageUI"></activity>
-        <activity android:name=".rankUI" />
-        <activity android:name=".searchUI" />
-        <activity android:name=".postUI" />
-        <activity android:name=".signupUI" />
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+        <activity android:name=".loginUI" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>>
+        <activity android:name=".signupUI" />
+        <activity android:name=".mypageUI"></activity>
+        <activity android:name=".rankUI" />
+        <activity android:name=".searchUI" />
+        <activity android:name=".postUI" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name">
         </activity>
         <activity android:name=".RequestHttpURLConnection" />
     </application>
