--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".reviewUI"></activity>
+        <activity android:name=".reviewsUI"></activity>
+        <activity android:name=".reviewUI" />
         <activity android:name=".searchResultUI" />
-        <activity android:name=".loginUI">
-
-        </activity>
+        <activity android:name=".loginUI"></activity>
         <activity android:name=".signupUI" />
         <activity android:name=".mypageUI" />
         <activity android:name=".rankUI" />
