--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,21 +15,22 @@
         <activity android:name=".reviewUI"></activity>
         <activity android:name=".searchResultUI" />
         <activity android:name=".loginUI">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".signupUI" />
         <activity android:name=".mypageUI" />
         <activity android:name=".rankUI" />
         <activity android:name=".searchUI" />
         <activity android:name=".postUI" />
+
+        <activity android:name=".User" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".RequestHttpURLConnection" />
     </application>
